--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": "^7.2",
         "ext-curl": "*",
         "league/omnipay": "^3.0",
-        "omnipay/WorldPay": "^3.0"
+        "omnipay/worldpay": "^3.0"
     },
     "require-dev": {
         "automattic/vipwpcs": "^0.3.0",
