--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
             "composer update --no-suggest",
             "@check-style",
             "composer normalize",
-            "doctoc README.md",
+            "npx doctoc README.md",
             "github_changelog_generator --no-verbose"
         ]
     },
