--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": "^7.2",
         "ext-curl": "*",
         "league/omnipay": "^3.0",
-        "omnipay/worldpay": "^3.0"
+        "omnipay/worldpay": "dev-cloudflare-support"
     },
     "require-dev": {
         "automattic/vipwpcs": "^0.3.0",
@@ -64,5 +64,14 @@
         "email": "hello@itineris.co.uk",
         "issues": "https://github.com/ItinerisLtd/gf-worldpay/issues",
         "source": "https://github.com/ItinerisLtd/gf-worldpay"
+    },
+    "repositories": {
+        "omnipay-worldpay": {
+            "type": "vcs",
+            "url": "https://github.com/ItinerisLtd/omnipay-worldpay.git",
+            "only": [
+                "omnipay/worldpay"
+            ]
+        }
     }
 }
